Started implementation of function interface (mostly service functions so far).

--- a/ide/libxstream.vcxproj.filters
+++ b/ide/libxstream.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="..\src\libxstream_stream.hpp">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\libxstream_argument.hpp">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\libxstream.cpp">
@@ -48,6 +51,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\libxstream_stream.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\libxstream_argument.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
