--- a/ide/libxstream.vcxproj
+++ b/ide/libxstream.vcxproj
@@ -33,12 +33,14 @@
     <ClInclude Include="..\include\libxstream_end.h" />
     <ClInclude Include="..\include\libxstream_macros.h" />
     <ClInclude Include="..\src\libxstream.hpp" />
+    <ClInclude Include="..\src\libxstream_argument.hpp" />
     <ClInclude Include="..\src\libxstream_capture.hpp" />
     <ClInclude Include="..\src\libxstream_event.hpp" />
     <ClInclude Include="..\src\libxstream_stream.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\libxstream.cpp" />
+    <ClCompile Include="..\src\libxstream_argument.cpp" />
     <ClCompile Include="..\src\libxstream_capture.cpp" />
     <ClCompile Include="..\src\libxstream_event.cpp" />
     <ClCompile Include="..\src\libxstream_stream.cpp" />
