--- a/ide/libxstream.vcxproj.filters
+++ b/ide/libxstream.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClInclude Include="..\src\libxstream_alloc.hpp">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\libxstream_offload.hpp">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\libxstream_context.hpp">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\libxstream.cpp">
@@ -60,6 +66,12 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\libxstream_alloc.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\libxstream_offload.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\libxstream_context.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
