--- a/ide/libxstream.vcxproj
+++ b/ide/libxstream.vcxproj
@@ -173,7 +173,7 @@
       <Cpp0xSupport>true</Cpp0xSupport>
       <DisableSpecificWarnings>
       </DisableSpecificWarnings>
-      <OffloadConstructs>None</OffloadConstructs>
+      <InterproceduralOptimization>SingleFile</InterproceduralOptimization>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
@@ -255,7 +255,7 @@
       <Cpp0xSupport>true</Cpp0xSupport>
       <DisableSpecificWarnings>
       </DisableSpecificWarnings>
-      <OffloadConstructs>None</OffloadConstructs>
+      <InterproceduralOptimization>SingleFile</InterproceduralOptimization>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
