--- a/samples/multi-dgemm/multi-dgemm.vcxproj
+++ b/samples/multi-dgemm/multi-dgemm.vcxproj
@@ -166,6 +166,7 @@
       <OpenMPSupport>true</OpenMPSupport>
       <Cpp0xSupport>true</Cpp0xSupport>
       <OpenMP>GenerateParallelCode</OpenMP>
+      <DisableSpecificDiagnostics>10373</DisableSpecificDiagnostics>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
@@ -206,6 +207,7 @@
       <Cpp0xSupport>true</Cpp0xSupport>
       <OpenMP>GenerateParallelCode</OpenMP>
       <InterproceduralOptimization>SingleFile</InterproceduralOptimization>
+      <DisableSpecificDiagnostics>10373</DisableSpecificDiagnostics>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
@@ -248,6 +250,7 @@
       <OpenMPSupport>true</OpenMPSupport>
       <Cpp0xSupport>true</Cpp0xSupport>
       <OpenMP>GenerateParallelCode</OpenMP>
+      <DisableSpecificDiagnostics>10373</DisableSpecificDiagnostics>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
@@ -289,6 +292,7 @@
       <Cpp0xSupport>true</Cpp0xSupport>
       <OpenMP>GenerateParallelCode</OpenMP>
       <InterproceduralOptimization>SingleFile</InterproceduralOptimization>
+      <DisableSpecificDiagnostics>10373</DisableSpecificDiagnostics>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
@@ -322,6 +326,7 @@
       <OpenMPSupport>true</OpenMPSupport>
       <Cpp0xSupport>true</Cpp0xSupport>
       <OpenMP>GenerateParallelCode</OpenMP>
+      <DisableSpecificDiagnostics>10373</DisableSpecificDiagnostics>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
@@ -359,6 +364,7 @@
       <OpenMPSupport>true</OpenMPSupport>
       <Cpp0xSupport>true</Cpp0xSupport>
       <OpenMP>GenerateParallelCode</OpenMP>
+      <DisableSpecificDiagnostics>10373</DisableSpecificDiagnostics>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
