--- a/samples/test/test.vcxproj
+++ b/samples/test/test.vcxproj
@@ -165,6 +165,7 @@
       <OpenMPSupport>true</OpenMPSupport>
       <Cpp0xSupport>true</Cpp0xSupport>
       <OpenMP>GenerateParallelCode</OpenMP>
+      <DisableSpecificDiagnostics>10373</DisableSpecificDiagnostics>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
@@ -205,6 +206,7 @@
       <Cpp0xSupport>true</Cpp0xSupport>
       <OpenMP>GenerateParallelCode</OpenMP>
       <InterproceduralOptimization>SingleFile</InterproceduralOptimization>
+      <DisableSpecificDiagnostics>10373</DisableSpecificDiagnostics>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
@@ -247,6 +249,7 @@
       <OpenMPSupport>true</OpenMPSupport>
       <Cpp0xSupport>true</Cpp0xSupport>
       <OpenMP>GenerateParallelCode</OpenMP>
+      <DisableSpecificDiagnostics>10373</DisableSpecificDiagnostics>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
@@ -288,6 +291,7 @@
       <Cpp0xSupport>true</Cpp0xSupport>
       <OpenMP>GenerateParallelCode</OpenMP>
       <InterproceduralOptimization>SingleFile</InterproceduralOptimization>
+      <DisableSpecificDiagnostics>10373</DisableSpecificDiagnostics>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
@@ -321,6 +325,7 @@
       <OpenMPSupport>true</OpenMPSupport>
       <Cpp0xSupport>true</Cpp0xSupport>
       <OpenMP>GenerateParallelCode</OpenMP>
+      <DisableSpecificDiagnostics>10373</DisableSpecificDiagnostics>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
@@ -358,6 +363,7 @@
       <OpenMPSupport>true</OpenMPSupport>
       <Cpp0xSupport>true</Cpp0xSupport>
       <OpenMP>GenerateParallelCode</OpenMP>
+      <DisableSpecificDiagnostics>10373</DisableSpecificDiagnostics>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0407</Culture>
