--- a/ide/libxstream.vcxproj
+++ b/ide/libxstream.vcxproj
@@ -35,23 +35,23 @@
     <ClInclude Include="..\src\libxstream.hpp" />
     <ClInclude Include="..\src\libxstream_alloc.hpp" />
     <ClInclude Include="..\src\libxstream_argument.hpp" />
-    <ClInclude Include="..\src\libxstream_capture.hpp" />
     <ClInclude Include="..\src\libxstream_context.hpp" />
     <ClInclude Include="..\src\libxstream_event.hpp" />
     <ClInclude Include="..\src\libxstream_offload.hpp" />
-    <ClInclude Include="..\src\libxstream_queue.hpp" />
     <ClInclude Include="..\src\libxstream_stream.hpp" />
+    <ClInclude Include="..\src\libxstream_workitem.hpp" />
+    <ClInclude Include="..\src\libxstream_workqueue.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\libxstream.cpp" />
     <ClCompile Include="..\src\libxstream_alloc.cpp" />
     <ClCompile Include="..\src\libxstream_argument.cpp" />
-    <ClCompile Include="..\src\libxstream_capture.cpp" />
     <ClCompile Include="..\src\libxstream_context.cpp" />
     <ClCompile Include="..\src\libxstream_event.cpp" />
     <ClCompile Include="..\src\libxstream_offload.cpp" />
-    <ClCompile Include="..\src\libxstream_queue.cpp" />
     <ClCompile Include="..\src\libxstream_stream.cpp" />
+    <ClCompile Include="..\src\libxstream_workitem.cpp" />
+    <ClCompile Include="..\src\libxstream_workqueue.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectName>libxstream</ProjectName>
