--- a/ide/libxstream.vcxproj.filters
+++ b/ide/libxstream.vcxproj.filters
@@ -27,9 +27,6 @@
     <ClInclude Include="..\src\libxstream.hpp">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\libxstream_capture.hpp">
-      <Filter>src</Filter>
-    </ClInclude>
     <ClInclude Include="..\src\libxstream_event.hpp">
       <Filter>src</Filter>
     </ClInclude>
@@ -48,15 +45,15 @@
     <ClInclude Include="..\src\libxstream_context.hpp">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\libxstream_queue.hpp">
+    <ClInclude Include="..\src\libxstream_workitem.hpp">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\libxstream_workqueue.hpp">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\libxstream.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\libxstream_capture.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\libxstream_event.cpp">
@@ -77,7 +74,10 @@
     <ClCompile Include="..\src\libxstream_context.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\libxstream_queue.cpp">
+    <ClCompile Include="..\src\libxstream_workitem.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\libxstream_workqueue.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
